--- a/form-pkl.html
+++ b/form-pkl.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>form tambah barang</title>
+  <title>Form Tambah Barang</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
@@ -16,12 +16,12 @@
 <body class="m-3">
   
   <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">tombol </button>
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">menu </button>
       <ul class="dropdown-menu dropdown-menu-dark">
-        <li><a class="dropdown-item active" href="index.html">lihat daftar jenis barang </a></a></li>
+        <li><a class="dropdown-item active" href="index.html">kembali</a></a></li>
     </div>
   
-  <h1>Form tambah barang</h1>
+  <h1>From Tambah Barang</h1>
 
   <form class="mb-3"
     <div class="mb-3">
