--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   <body class="m-3">
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        tambah
+        menu
       </button>
       <ul class="dropdown-menu dropdown-menu-dark">
         <li><a class="dropdown-item active" href="form-pkl.html">tambah data</a></a></li>
     </div>
 
-    <h1>stok bahan baku kaf grup Indonesia </h1>
+    <h1>Stok Bahan Baku Baf Grup Indonesia </h1>
 
 
 
