--- a/ubah-pkl.html
+++ b/ubah-pkl.html
@@ -20,7 +20,7 @@
 <body class="m-4">
   
   <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">tombol </button>
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">menu </button>
       <ul class="dropdown-menu dropdown-menu-dark">
         <li><a class="dropdown-item active" href="index.html">lihat daftar jenis barang </a></a></li>
     </div>
